# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinybig"
version = "0.1.0"
description = "A toolkit of deep function learning"

readme = "README.md"
authors = [
    { name = "Jiawei Zhang", email = "jiawei@ifmlab.org" }
]
license = {file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

keywords = [
    "data expansion",
    "parameter reconciliation",
    "remainder function",
    "reconciled polynomial network",
    "deep function learning",
    "deep learning",
    "artificial intelligence"
]

dependencies = [
    "torch==2.2.2",
    "numpy==1.26.3",
    "pyyaml==6.0.1",
    "scipy==1.13.1",
    "tqdm==4.66.4",
    "torchvision==0.17.2",
    "torchtext==0.17.2",
    "scikit-learn==1.5.1",
    "matplotlib==3.9.1",
]

requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
Homepage = "https://www.tinybig.org"

[project.scripts]
realpython = "tinybig.__main__:main"

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"README.md" = [
    "{version}",
]
"tinybig/__init__.py" = [
    "{version}"
]

